feat: create predefine user roles