@@ -1,10 +1,13 @@
 package com.ankaboot.AuthenticationServer;
 
 import com.ankaboot.AuthenticationServer.dataaccess.service.UserService;
+import java.util.Arrays;
+import java.util.List;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.oauth2.config.annotation.web.configuration.EnableAuthorizationServer;
 import org.springframework.security.oauth2.config.annotation.web.configuration.EnableResourceServer;
 
@@ -22,8 +25,12 @@ public class AuthenticationServerApplication implements CommandLineRunner {
 
   @Override
   public void run(String... args) throws Exception {
-//    userService.createUser("admin","123",Arrays.asList("ADMIN"));
-//    userService.createUser("manager","123",Arrays.asList("MANAGER"));
-//    userService.createUser("analyst","123",Arrays.asList("ANALYST"));
+    try {
+      userService.fetchUser("admin");
+    } catch (UsernameNotFoundException unf) {
+      userService.createUser("admin", "123", List.of("ADMIN"));
+      userService.createUser("maintainer", "123", List.of("MAINTAINER"));
+      userService.createUser("analyst", "123", List.of("ANALYST"));
+    }
   }
 }
